--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ def coroutines = "1.6.0"
 def lifecycleVersion = "2.4.1"
 def activity_version = "1.4.0"
 def fragment_version = "1.4.1"
+def camerax_version = "1.1.0-beta01"
 
 dependencies {
 
@@ -67,6 +68,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
+
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
